univention-group-membership-cache (2.0.0-13) unstable; urgency=low

  * Bug #55286: Fix GDBM file descriptor leak on reorganize()

 -- Philipp Hahn <hahn@univention.de>  Thu, 20 Oct 2022 18:14:20 +0200

univention-group-membership-cache (2.0.0-12) unstable; urgency=low

  * Bug #54502: Update UDN module API

 -- Philipp Hahn <hahn@univention.de>  Tue, 27 Sep 2022 14:11:36 +0200

univention-group-membership-cache (2.0.0-11) unstable; urgency=medium

  * Bug #55120: Fix load()

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 24 Aug 2022 10:25:35 +0200

univention-group-membership-cache (2.0.0-10) unstable; urgency=medium

  * Bug #55120: Further improve performance

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 23 Aug 2022 23:10:27 +0200

univention-group-membership-cache (2.0.0-9) unstable; urgency=medium

  * Bug #55120: Fix users_groups

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 22 Aug 2022 20:49:49 +0200

univention-group-membership-cache (2.0.0-8) unstable; urgency=medium

  * Bug #55120: users_groups consumes all CPU time

 -- Nikola Radovanovic <radovanovic.extern@univention.de>  Mon, 22 Aug 2022 15:01:32 +0200

univention-group-membership-cache (2.0.0-7) unstable; urgency=medium

  * Bug #54497: Use univention-group-membership-cache to obtain groups
    user belongs to

 -- Nikola Radovanovic <radovanovic.extern@univention.de>  Wed, 10 Aug 2022 19:10:34 +0200

univention-group-membership-cache (2.0.0-6) unstable; urgency=medium

  * Bug #54561: Return empty list instead of None

 -- Julia Bremer <bremer@univention.de>  Mon, 21 Mar 2022 18:34:03 +0100

univention-group-membership-cache (2.0.0-5) unstable; urgency=medium

  * Bug #54182: Retry on reorganize

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 07 Dec 2021 11:48:19 +0100

univention-group-membership-cache (2.0.0-3) unstable; urgency=medium

  * Bug #54182: Do not open in blocking mode

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Sun, 05 Dec 2021 21:24:50 +0100
