@@ -1,1 +1,1 @@
-univention-ldap-cache	usr/share/univention-group-membership-cache/
+univention-ldap-cache	usr/sbin/
